--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,6 @@ ILL_pipelines/
 *.bracken
 */Bracken*/*/*/*_temp.MPA.TXT
 */Bracken*/*/*_taxonomy_nt
-*.fastqc*html
-*.fastqc.zip
+*fastqc*html
+*fastqc.zip
 *fastqc/
