--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Generic
+.DS_Store
 tmp/
 bak/
 *.bak
@@ -11,11 +13,15 @@ archive/
 *.fastq.gz
 *.sig
 *.bowtie2.txt
-.RData
+
+# R files
+.RData*
+.Rapp.history
 .Rhistory
 *.Rproj
 .Rproj.user
-.DS_Store
+
+# specific
 ILL_pipelines/
 *kronagrams/
 *kreport 
